--- a/src/components/form/cvform.css
+++ b/src/components/form/cvform.css
@@ -5,6 +5,10 @@
     padding: 2rem 0;
 }
 
+textarea {
+    font-family: 'Roboto Slab', serif; 
+}
+
 h1, h2 {
     margin: 0 0 0.2rem 0;
 }
@@ -36,4 +40,11 @@ h1, h2 {
     background: #ffffff;
     box-shadow:  5px 5px 10px #808080,
                  -5px -5px 10px #ffffff;
+}
+
+@media only screen and (max-width: 425px) {
+    .cv-form {
+        width: 70vw;
+    }
+    
 }
