--- a/src/components/view/cvbody.css
+++ b/src/components/view/cvbody.css
@@ -1,5 +1,6 @@
 .cv-body {
     padding: 3rem;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 hr {
